@@ -1,3 +1,7 @@
+2011-01-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ld-x86-64/ilp32-4.d: Updated.
+
 2011-01-17  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	* ld-arm/arm-rel32.s, ld-arm/arm-rel32.d: New testcase.
